--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Parking
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        Queue.h Queue.cpp
+        Node.h Node.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Parking APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
