feat:添加了ParkingLotLabel类，现在可以创建车位了

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         Queue.h Queue.cpp
         Node.h Node.cpp
+        imgSrc.qrc
+        Parkingplacelabel.h Parkingplacelabel.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Parking APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
